--- a/source/fr/index.html.erb
+++ b/source/fr/index.html.erb
@@ -12,18 +12,18 @@ title: Kassiopé Project
         <div class="col-sm- 2 col-md-4">
         </div>
         <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
-          <h1 class="slideExpandUp">Our Kassiopé Project</h1>
+          <h1 class="slideExpandUp">Notre Projet Kassiopé</h1>
           <div class="row">
             <div class="col-sm-2">
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="button">
-                <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Notre vidéo</a>
               </div>
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="button">
-                <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
+                <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
               </div>
             </div>
             <div class="col-xs-2">
@@ -43,23 +43,23 @@ title: Kassiopé Project
 
       <div id="issue">
         <div class="container box">
-          <h2>What is the issue</h2>
-          <h4>1.000.000.000 people suffer from refractive error !</h4>
+          <h2>Quel est le problème</h2>
+          <h4>1.000.000.000 personnes souffrent de problèmes de vision !</h4>
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
                 <%= image_tag "rub.svg", class: "logo-homepage" %>
-                <p>Every daily task becomes a challenge !</p>
+                <p>Chaque activité quotidienne devient une épreuve !</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
                 <%= image_tag "read-book-logo.svg", class: "logo-homepage" %>
-                <p>Studying results impossible !</p>
+                <p>Etudier devient alors impossible !</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
                 <%= image_tag "glasses.svg", class: "logo-homepage" %>
-                <p>Glasses are not affordable !</p>
+                <p>Les lunettes ne sont pas abordables !</p>
               </div>
             </div>
 
@@ -70,17 +70,17 @@ title: Kassiopé Project
       </div>
 
       <div id="action" class="box">
-        <h2>Our action at Ahmedabad in India</h2>
+        <h2>Notre action à Ahmedabad en Inde</h2>
         <div class="container-fluid">
           <div class="row">
             <div class="next-to-photo-text col-md-7 col-sm-8 col-xs-12">
               <ul>
-                <li>Our project will take place during the summer break of 2016</li>
-                <li>Provide the students of the center with free eye tests</li>
-                <li>Order glasses from local opticians for the students in need of eye corrections</li>
-                <li>Teaching members of Manav Sadhna how to perform an eye test</li>
-                <li>Elaborate a collaboration between Manav Sadhna and donors for a monthly supply of glasses to the community</li>
-                <li>In that way : Consolidate our project on the long run</li>
+                <li>Notre mission humanitaire se déroulera durant les vacances d'été, en juillet 2016</li>
+                <li>Offrir aux élèves du centre des tests gratuits d'acuité visuelle</li>
+                <li>Commander des verres aux opticiens locaux pour les élèves en besoin</li>
+                <li>Enseigner aux membres de Manav Sadhna à réaliser un test d'acuité visuelle</li>
+                <li>Elaborer une collaboration entre Manav Sadhna et des donneurs pour une fourniture mensuelle de verres à la communauté</li>
+                <li>Dans ce sens : Consolider notre projet à long terme</li>
               </ul>
             </div>
 
@@ -95,7 +95,7 @@ title: Kassiopé Project
       <div id="us" class="box">
 
         <div class="container-fluid">
-          <h2>Let's talk about us !</h2>
+          <h2>Parlons de nous !</h2>
           <div class="row">
 
             <div class="us-img text-center col-sm-5">
@@ -105,9 +105,9 @@ title: Kassiopé Project
 
             <div class="us-text next-to-photo-text col-sm-7">
               <ul>
-                <li>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</li>
-                <li>Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</li>
-                <li>We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.</li>
+                <li>Kassiopé est une association à but non-lucratif dont l'objectif est l'accès à des soins oculaires pour les plus démunis</li>
+                <li>Deux d’entre nous sont déjà allés à Ahmedabad et ont enseigné dans une école près de l’Ashram de Gandhi. </li>
+                <li>Nous partageons tous la même ambition : Voyager en Inde afin d’offrir à des enfants une qualité de vie décente en commençant par une bonne vue.</li>
               </ul>
             </div>
           </div>
