--- a/source/about_us.html.erb
+++ b/source/about_us.html.erb
@@ -8,22 +8,28 @@ title: Kassiopé Project
 </head>
 
 <body>
+
+  <div id="members">
+    <div class="container">
+      <div class="row">
+        <% data.members.each do |member| %>
+          <div class="col-xs-6 col-md-3">
+            <div class="description">
+              <%= image_tag member.image_file, class: "photo-us img-circle" %>
+              <h3><%= member.name %> </h3>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
   <div class="about-us-text primary-text">
+
     <h2>Short presentation</h2>
-    <p>
-      Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled. It was created in June of 2015 by a group of six french students,
-      all of whom study at the Lycée International of St.Germain en Laye.
-    </p>
+    <p> <%= t(:presentation) %> </p>
     <h2>Our target</h2>
-    <p>
-      Its primary goal is to unearth diabetic retinopathy in regions lacking with eye doctors,
-      as in France the number of ophthalmologists has immensely decreased in the past few years. However, supported by batch of three new members we have decided
-      to export our project outside of France. Two of us, having already been to India, imagined our project in Ahmedabad where we would offer free eye tests and
-      glasses to the people of the slums, particularly to the people related to Manav Sadhna. Two of us have already taught in one of the schools near the Gandhi
-      Ashram and wish for our first eye tests to be in these types of schools where reading facilities are most needed. We hope to bolster our project to the entire
-      slum but our eye tests can only expand as far as our stocks of glasses will increase. Kassiopé is associated to two companies (LeVisologiste and MXOphtalmic)
-      who can offer cheap(er) equipment, supervise our projects and most importantly, make us look credible and trustworthy to future professional partners.
-    </p>
+    <p> <%= t(:target) %> </p>
   </div>
 
 </body>
