--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
-          <a href="fr/index_fr.html">
+          <a href="fr/index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
           <a href="http://localhost:4567">
