Site multilingue EN + FR
2 layout files
configuration in config.rb to choose which layout for which page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,10 +32,10 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
-          <a href="fr/index.html">
+          <a href="fr/fr-index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
-          <a href="http://localhost:4567">
+          <a href="index.html">
             <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
           </a>
 
