--- a/source/layouts/layout_fr.erb
+++ b/source/layouts/layout_fr.erb
@@ -31,11 +31,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Kassiopé", "index_fr.html", class: "navbar-brand" %>
-          <a href="index_fr.html">
+          <%= link_to "Kassiopé", "fr-index.html", class: "navbar-brand" %>
+          <a href="fr-index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
-          <a href="http://localhost:4567">
+          <a href="../index.html">
             <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
           </a>
 
@@ -44,9 +44,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Notre action", "action.html" %></li>
-            <li><%= link_to "A propos de nous", "about_us.html" %></li>
-            <li><%= link_to "Nos partenaires", "team_fr.html" %></li>
+            <li><%= link_to "Notre action", "fr-action.html" %></li>
+            <li><%= link_to "A propos de nous", "fr-about_us.html" %></li>
+            <li><%= link_to "Nos partenaires", "fr-partners.html" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
