--- a/source/fr/fr-about_us.html.erb
+++ b/source/fr/fr-about_us.html.erb
@@ -11,7 +11,7 @@ title: Kassiopé Project
   <div class="about-us-text primary-text">
     <h2>Qui sommes-nous </h2>
     <p>
-      Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisés. Cet association a té crée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye. 
+      Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisés. Cet association a té crée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye.
     </p>
     <h2>Notre objectif</h2>
     <p>
@@ -19,4 +19,15 @@ title: Kassiopé Project
     </p>
   </div>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-77432133-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  
 </body>
