--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,9 @@ title: Kassiopé Project
 
 <%= stylesheet_link_tag "all" %>
 <head>
+  <title>Kassiope Project - India</title>
   <meta charset="utf-8">
+  <meta name="description" content="Kassiope is a humanitarian mission which aims offering kids in Ahmedabad's schools in India an access to acuteness tests and glasses">
 </head>
 <body>
     <div id="wrapper">
@@ -48,17 +50,17 @@ title: Kassiopé Project
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "rub.svg", class: "logo-homepage" %>
+                <%= image_tag "rub.svg", class: "logo-homepage" alt="Rubikube"%>
                 <p>Every daily task becomes a challenge !</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "read-book-logo.svg", class: "logo-homepage" %>
+                <%= image_tag "read-book-logo.svg", class: "logo-homepage" alt="Books"%>
                 <p>Studying results impossible !</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-                <%= image_tag "glasses.svg", class: "logo-homepage" %>
+                <%= image_tag "glasses.svg", class: "logo-homepage" alt="Glasses"%>
                 <p>Glasses are not affordable !</p>
               </div>
             </div>
@@ -85,7 +87,7 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-5 col-sm-4">
-              <%= image_tag "fille.png", class: "hidden-xs" %>
+              <%= image_tag "fille.png", class: "hidden-xs" alt="Indian girl"%>
             </div>
 
           </div>
@@ -128,5 +130,15 @@ title: Kassiopé Project
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-77432133-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
   </body>
