Meta description + alt (images) on homepage

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -50,17 +50,17 @@ title: Kassiopé Project
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "rub.svg", class: "logo-homepage" alt="Rubikube"%>
+                <%= image_tag "rub.svg", class: "logo-homepage", alt: "Rubikube"%>
                 <p>Every daily task becomes a challenge !</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "read-book-logo.svg", class: "logo-homepage" alt="Books"%>
+                <%= image_tag "read-book-logo.svg", class: "logo-homepage", alt: "Books"%>
                 <p>Studying results impossible !</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-                <%= image_tag "glasses.svg", class: "logo-homepage" alt="Glasses"%>
+                <%= image_tag "glasses.svg", class: "logo-homepage", alt: "Glasses"%>
                 <p>Glasses are not affordable !</p>
               </div>
             </div>
@@ -87,7 +87,7 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-5 col-sm-4">
-              <%= image_tag "fille.png", class: "hidden-xs" alt="Indian girl"%>
+              <%= image_tag "fille.png", class: "hidden-xs", alt: "Indian girl"%>
             </div>
 
           </div>
