Action fr rempli
Le problème
Ce que nous proposons
Notre préparation pré-voyage

--- a/source/fr/fr-action.html.erb
+++ b/source/fr/fr-action.html.erb
@@ -1,1 +1,56 @@
-<p>hey</p>
+---
+title: Kassiopé Project
+---
+
+<%= stylesheet_link_tag "all" %>
+<head>
+  <meta charset="utf-8">
+</head>
+<body>
+  <div class="jumbotron">
+    <div class="row">
+      <div class="text-center col-sm-6">
+        <h1 id="believe">We believe </h1>
+      </div>
+      <div class="text-center col-sm-6">
+        <h1 id="progress">in progress !</h1>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="issue-text primary-text">
+    <h2>Le problème</h2>
+    <p>
+      Aujourd'hui, se procurer des lunettes est impossible pour des millions de personnes. Selon l'Organisation Mondiale de la Santé, plus d'un
+      milliard de personne souffre d'erreur de réfraction, ce qui en fait la première cause de pathologie visuelle dans le monde.
+      Cependant, des problèmes de vision entrainent des conséquences non-négligeables au quotidien : les opportunités d'un mal voyant diminuent
+      avec sa capacité visuelle et l'OMS prévoit qu'en 2030, les erreurs de réfraction fassent partie des 10 premières maladies affectant le plus gravement
+      la productivité et le quotidien de la personne.
+    </p>
+
+    <h2>Ce que nous proposons</h2>
+    <p>
+      Le projet Kassiopé vise à déployer des moyens technologiques modernes à Ahmedabad (Gujarat) en Inde afin d'offrir aux enfants mal-voyants
+      une possibilité d'émancipation professionnelle et sociale.
+    </p>
+    <h2>Un temps de préparation pendant lequel nous avons </h2>
+    <ul>
+      <li>Réalisé des stages chez Le Visiologiste pour apprendre une démarche professionnelle d'optométrie</li>
+      <li>Obtenu des réfractomètres automatiques afin d'augmenter considérablement notre productivité ainsi que les précisions de nos résultats</li>
+      <li>Contacté des opticiens professionnels sur place dans les cas de pathologies plus complexes</li>
+      <li>Récolté des fonds pour l'achat des verres</li>
+    </ul>
+  </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-77432133-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+</body>
