--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -25,7 +25,7 @@ title: Kassiopé Project
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="button">
-                <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg"><%= t(:support) %></a>
+                <a target="_blank" href="https://www.gofundme.com/27k8efnw" class="btn btn-warning btn-lg"><%= t(:support) %></a>
               </div>
             </div>
             <div class="col-xs-2">
