--- a/source/fr/fr-index.html.erb
+++ b/source/fr/fr-index.html.erb
@@ -23,7 +23,7 @@ title: Kassiopé Project
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="button">
-                <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
+                <a target="_blank" href="https://www.gofundme.com/27k8efnw" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
               </div>
             </div>
             <div class="col-xs-2">
