Partenaire Lycée Inter

--- a/source/partners.html.erb
+++ b/source/partners.html.erb
@@ -13,6 +13,8 @@ title: Kassiopé Project
       <li><%= I18n.t(:partners_manav) %> </li>
       <li><%= I18n.t(:partners_visiologiste) %></li>
       <li><%= I18n.t(:partners_mxophtalmic) %></li>
+      <li><%= I18n.t(:partners_lycer_inter) %></li>
+
     </ul>
   </div>
 
