--- a/source/partners.html.erb
+++ b/source/partners.html.erb
@@ -9,12 +9,46 @@ title: Kassiopé Project
 
 <body>
   <div class="partner primary-text">
+    <h3>A heartfelt thank you to our following supporters</h3>
     <ul>
+      <li>The American section : </li>
+      <ul>
+        <li>For inspiring the project through the MGIS/American Section exchange program.</li>
+        <li>For launching our project with a 1500€ Global Citizen Award.</li>
+      </ul>
+      <li>Manav Sadhna : </li>
+      <ul>
+        <li>For hosting our project in Ahmadabad and helping with coordination.</li>
+        <li>For maintaining our project on a long-term basis.</li>
+      </ul>
+      <li>MXOphtalmic : </li>
+      <ul>
+        <li>For donating glasses for the clinic.</li>
+        <li>For donating an autorefractometer.</li>
+      </ul>
+      <li>Le Visiologiste</li>
+      <ul>
+        <li>For training us on eye exams.</li>
+      </ul>
+      <li>The Ahmedabad Eye Laser Hospital:</li>
+      <ul>
+        <li>For their support and supervision of our clinic in Ahmedabad.</li>
+      </ul>
+      <li>Brian Ball:</li>
+      <ul>
+        <li>For helping us launch the project</li>
+      </ul>
+      <li>Dr.Prema from the Lotus Eye Clinic:</li>
+      <ul>
+        <li>For her advice and support for our project.</li>
+      </ul>
+      <li>For our parents unending help and support.</li>
+      <li>We can not make it without you!</li>
+      <!--
       <li><%= I18n.t(:partners_manav) %> </li>
       <li><%= I18n.t(:partners_visiologiste) %></li>
       <li><%= I18n.t(:partners_mxophtalmic) %></li>
-      <li><%= I18n.t(:partners_lycer_inter) %></li>
-
+      <li><%= I18n.t(:partners_lycer_inter) %></li>-->
     </ul>
   </div>
 
