--- a/source/stylesheets/pages/_partners.css.scss
+++ b/source/stylesheets/pages/_partners.css.scss
@@ -1,3 +1,13 @@
-.partner ul {
-  margin-top: 90px;
+.partner {
+  ul {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  }
+  li {
+    margin-top: 8px;
+  }
+  h3 {
+    margin-top: 100px;
+    text-align: center;
+  }
 }
