Photo + mail : About Us

--- a/source/about_us.html.erb
+++ b/source/about_us.html.erb
@@ -9,6 +9,7 @@ title: Kassiopé Project
 
 <body>
 
+<!--
   <div id="members">
     <div class="container">
       <div class="row">
@@ -23,9 +24,17 @@ title: Kassiopé Project
       </div>
     </div>
   </div>
+-->
+  <div class="photo-us">
+    <%= image_tag "nous.jpg", class:"photo-of-us", alt:"Photo of our team" %>
+  </div>
 
   <div class="about-us-text primary-text">
 
+    <h2>Contact Us </h2>
+    <p>
+    If you have any question, please send us a mail at :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
+    </p>
     <h2>Short presentation</h2>
     <p> <%= t(:presentation) %> </p>
     <h2>Our target</h2>
