--- a/source/fr/fr-about_us.html.erb
+++ b/source/fr/fr-about_us.html.erb
@@ -8,7 +8,15 @@ title: Kassiopé Project
 </head>
 
 <body>
-  <div class="about-us-text primary-text">
+    <div class="photo-us">
+      <%= image_tag "nous.jpg", class:"photo-of-us", alt:"Photo de notre équipe" %>
+    </div>
+
+    <div class="about-us-text primary-text">
+      <h2>Contactez-nous </h2>
+      <p>
+      Si vouz avez une question ou necessitez une information supplémentaire, envoyez-nous un mail à :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
+      </p>
     <h2>Qui sommes-nous </h2>
     <p>
       Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisés. Cet association a té crée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye.
@@ -29,5 +37,5 @@ title: Kassiopé Project
     ga('send', 'pageview');
 
   </script>
-  
+
 </body>
