--- a/source/stylesheets/pages/_about_us.css.scss
+++ b/source/stylesheets/pages/_about_us.css.scss
@@ -1,5 +1,5 @@
 .about-us-text {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 
@@ -14,4 +14,11 @@
     text-align: center;
     padding-right: 60px;
   }
+}
+
+.photo-us {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: -180px;
+  height: 450px;
 }
