Correction fautes d'orthographes #1 version française

--- a/source/fr/fr-about_us.html.erb
+++ b/source/fr/fr-about_us.html.erb
@@ -19,11 +19,19 @@ title: Kassiopé Project
       </p>
     <h2>Qui sommes-nous </h2>
     <p>
-      Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisés. Cet association a té crée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye.
+      Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisées. Cette association a été créée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye.
     </p>
     <h2>Notre objectif</h2>
     <p>
-      Le but premier de notre projet est d’améliorer le train de vie des plus démunis. Toutefois, nous avons décidé d’exporter notre projet en dehors de la France. Deux d’entre nous étant déjà partis en Inde, nous avons imaginé notre projet à Ahmedabad où l’on offrira des tests d’acuité visuelle aux populations des bidonvilles, et plus particulièrement à la communauté attachée à Manav Sadhna. Ayant enseigné dans des écoles près de l’Ashram de Gandhi nous souhaitons que nos premiers tests d’acuité visuelle soient dans ce type d’école afin de plaidoyer le lettrisme. On espère étendre notre projet  au bidonville entier, mais nos soins peuvent seulement s’étendre aussi loin que notre stock de lunette se remplit. Kassiopé est associé avec deux compagnies (LeVisiologiste et MXOphtalmic ) qui peuvent équiper et superviser nos projets mais surtout, nous rendre crédibles et dignes de confiance auprès de nos futurs partenaires.
+      Le but premier de notre projet est d’améliorer le train de vie des plus démunis.
+      Toutefois, nous avons décidé d’exporter notre projet en dehors de la France.
+      Deux d’entre nous étant déjà partis en Inde, nous avons imaginé notre projet à Ahmedabad où l’on offrira des tests
+      d’acuité visuelle aux populations des bidonvilles, et plus particulièrement à la communauté attachée à Manav Sadhna.
+      Ayant enseigné dans des écoles près de l’Ashram de Gandhi nous souhaitons que nos premiers tests d’acuité visuelle
+      soient dans ce type d’école afin de plaidoyer le lettrisme. On espère étendre notre projet au bidonville entier,
+      mais nos soins peuvent seulement s’opérer tant que notre stock de lunettes se remplit. Kassiopé est associé
+      avec deux cliniques (LeVisiologiste et MXOphtalmic ) qui peuvent équiper et superviser nos projets mais surtout, 
+      nous rendre crédibles et dignes de confiance auprès de nos futurs partenaires.
     </p>
   </div>
 
