--- a/source/fr/fr-action.html.erb
+++ b/source/fr/fr-action.html.erb
@@ -23,9 +23,9 @@ title: Kassiopé Project
     <h2>Le problème</h2>
     <p>
       Aujourd'hui, se procurer des lunettes est impossible pour des millions de personnes. Selon l'Organisation Mondiale de la Santé, plus d'un
-      milliard de personne souffre d'erreur de réfraction, ce qui en fait la première cause de pathologie visuelle dans le monde.
+      milliard de personnes souffrent d'erreur de réfraction, ce qui en fait la première cause de pathologie visuelle dans le monde.
       Cependant, des problèmes de vision entrainent des conséquences non-négligeables au quotidien : les opportunités d'un mal voyant diminuent
-      avec sa capacité visuelle et l'OMS prévoit qu'en 2030, les erreurs de réfraction fassent partie des 10 premières maladies affectant le plus gravement
+      avec sa capacité visuelle et l'OMS prévoit qu'en 2030, les erreurs de réfraction fassent parties des 10 premières maladies affectant le plus gravement
       la productivité et le quotidien de la personne.
     </p>
 
@@ -38,7 +38,7 @@ title: Kassiopé Project
     <ul>
       <li>Réalisé des stages chez Le Visiologiste pour apprendre une démarche professionnelle d'optométrie</li>
       <li>Obtenu des réfractomètres automatiques afin d'augmenter considérablement notre productivité ainsi que les précisions de nos résultats</li>
-      <li>Contacté des opticiens professionnels sur place dans les cas de pathologies plus complexes</li>
+      <li>Contacté des opticiens professionnels sur place pour les cas de pathologies plus complexes</li>
       <li>Récolté des fonds pour l'achat des verres</li>
     </ul>
   </div>
