Fautes d'orthographe #2 FRA

--- a/source/fr/fr-action.html.erb
+++ b/source/fr/fr-action.html.erb
@@ -23,15 +23,15 @@ title: Kassiopé Project
     <h2>Le problème</h2>
     <p>
       Aujourd'hui, se procurer des lunettes est impossible pour des millions de personnes. Selon l'Organisation Mondiale de la Santé, plus d'un
-      milliard de personnes souffrent d'erreur de réfraction, ce qui en fait la première cause de pathologie visuelle dans le monde.
-      Cependant, des problèmes de vision entrainent des conséquences non-négligeables au quotidien : les opportunités d'un mal voyant diminuent
+      milliard d'individus souffrent d'erreur de réfraction, ce qui en fait la première cause de pathologie visuelle dans le monde.
+      Cependant, des problèmes de vision entrainent des conséquences non-négligeables au quotidien : les opportunités d'un malvoyant diminuent
       avec sa capacité visuelle et l'OMS prévoit qu'en 2030, les erreurs de réfraction fassent parties des 10 premières maladies affectant le plus gravement
       la productivité et le quotidien de la personne.
     </p>
 
     <h2>Ce que nous proposons</h2>
     <p>
-      Le projet Kassiopé vise à déployer des moyens technologiques modernes à Ahmedabad (Gujarat) en Inde afin d'offrir aux enfants mal-voyants
+      Le projet Kassiopé vise à déployer des moyens technologiques modernes à Ahmedabad (Gujarat) en Inde afin d'offrir aux enfants malvoyant
       une possibilité d'émancipation professionnelle et sociale.
     </p>
     <h2>Un temps de préparation pendant lequel nous avons </h2>
