--- a/source/fr/fr-about_us.html.erb
+++ b/source/fr/fr-about_us.html.erb
@@ -5,6 +5,7 @@ title: Kassiopé Project
 <%= stylesheet_link_tag "all" %>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
@@ -15,22 +16,22 @@ title: Kassiopé Project
     <div class="about-us-text primary-text">
       <h2>Contactez-nous </h2>
       <p>
-      Si vouz avez une question ou necessitez une information supplémentaire, envoyez-nous un mail à :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
+      Si vous avez une question ou necessitez une information supplémentaire, envoyez-nous un mail à :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
       </p>
-    <h2>Qui sommes-nous </h2>
+    <h2>Qui sommes-nous</h2>
     <p>
-      Kassiopé est une association à but non lucratif dont le but est d’offrir des soins pour les populations les plus défavorisées. Cette association a été créée en Juin 2015 par un groupe de six lycéens Français étudiant tous au Lycée International de St.Germain en Laye.
+      Kassiopé est une association à but non lucratif dont l'objectif est d’offrir des soins pour les populations les plus défavorisées. Cette association a été créée en juin 2015 par un groupe de six lycéens français étudiant tous au Lycée International de Saint-Germain-en-Laye.
     </p>
     <h2>Notre objectif</h2>
     <p>
       Le but premier de notre projet est d’améliorer le train de vie des plus démunis.
       Toutefois, nous avons décidé d’exporter notre projet en dehors de la France.
-      Deux d’entre nous étant déjà partis en Inde, nous avons imaginé notre projet à Ahmedabad où l’on offrira des tests
+      Deux d’entre-nous étant déjà partis en Inde, nous avons imaginé notre projet à Ahmedabad où l’on offrira des tests
       d’acuité visuelle aux populations des bidonvilles, et plus particulièrement à la communauté attachée à Manav Sadhna.
       Ayant enseigné dans des écoles près de l’Ashram de Gandhi nous souhaitons que nos premiers tests d’acuité visuelle
-      soient dans ce type d’école afin de plaidoyer le lettrisme. On espère étendre notre projet au bidonville entier,
+      soient dans ce type d’école afin de lutter contre l'illetrisme. On espère étendre notre projet au bidonville entier,
       mais nos soins peuvent seulement s’opérer tant que notre stock de lunettes se remplit. Kassiopé est associé
-      avec deux cliniques (LeVisiologiste et MXOphtalmic ) qui peuvent équiper et superviser nos projets mais surtout, 
+      avec deux cliniques (Le Visiologiste et MXOphtalmic ) qui peuvent équiper et superviser nos projets mais surtout,
       nous rendre crédibles et dignes de confiance auprès de nos futurs partenaires.
     </p>
   </div>
