--- a/source/fr/fr-partners.html.erb
+++ b/source/fr/fr-partners.html.erb
@@ -49,7 +49,7 @@ title: Kassiopé Project
     <!--  <li>Merci à Manav Sadhna, qui, à travers la pratique des apprentissages de Gandhi, a depuis 20 ans aidé les communautés les plus démunies à se reconstruire à s'émanciper de la pauvreté. L'association Manav Sadhna est prête à héberger notre clinique </li>
       <li>Le Visiologiste est une fondation française qui nous a aidé dans l'apprentissage des tests visuels. Nous les remercions pour leur expertise et leur accueil chaleureux</li>
       <li>MX Ophtalmic nous a fourni un autoréfractomètre au prix le plus bas du marché. Cet appareil nous permettra de démultiplier le nombre de patients</li>
-      <li>La section américaine du Lycée Intrnationale de Saint-Germain en Laye a fortement participé au lancement de l'association Kassiopé grâce à un don de 1500 €.
+      <li>La section américaine du Lycée Intrnationale de Saint-Germain-en-Laye a fortement participé au lancement de l'association Kassiopé grâce à un don de 1500 €.
       Elle a également maintenu l'échange avec le MGIS.</li> -->
 
   </div>
