--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -20,7 +20,7 @@
 }
 
 .issue-text {
-  margin-top: -40px;
-  margin-bottom: -45px;
-
+  margin: -40px auto -45px auto;
+  max-width: 1200px;
+  padding: 0px 40px 0px 40px;
 }
