Adventure blog fr until day 7 w/o design

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -45,6 +45,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Our action", "action.html" %></li>
+            <li><%= link_to "Our adventure", "adventure.html" %></li>
             <li><%= link_to "About us", "about_us.html" %></li>
             <li><%= link_to "Our partners", "partners.html" %></li>
           </ul>
@@ -52,7 +53,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    
+
 
     <%= yield %>
   </body>
