--- a/source/layouts/layout_fr.erb
+++ b/source/layouts/layout_fr.erb
@@ -45,6 +45,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Notre action", "fr-action.html" %></li>
+            <li><%= link_to "Notre aventure", "fr-adventure.html" %></li>
             <li><%= link_to "A propos de nous", "fr-about_us.html" %></li>
             <li><%= link_to "Nos partenaires", "fr-partners.html" %></li>
           </ul>
