Correction day 1 to 7

--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -11,25 +11,25 @@ title: Kassiopé Project
   <div class="primary-text blog">
     <h3>Jour 1</h3>
     <p>
-      C est l’heure du grand départ. 8 heures du matin et on se retrouve tous à l aéroport prêt à partir pour cette
+      C'est l’heure du grand départ. 8 heures du matin et on se retrouve tous à l aéroport prêts à partir pour cette
       grande experience humanitaire. Le vol se passe à merveille. On rencontre tous plusieurs passagers indiens chacun
-      de notre côté et tous sont aussi gentil les uns que les autres. Ils nous conseillent tous des endroits à visiter
-      à Ahmedabad. Ils sont très ouvert et on l air très intéressé par notre projet. Ce voyage s'annonce vraiment bien.
-      On arrive parfaitement à l'heure à Ahmedabad et une fois tous les produits anti-moustique appliqué et les
-      antibiotiques avalé, on est prêt à découvrir ce pays, nouveau pour deux d entre nous. Une arrivé difficile à
+      de notre côté et tous sont aussi gentils les uns que les autres. Ils nous conseillent tous des endroits à visiter
+      à Ahmedabad. Ils sont très ouverts et intéressés par notre projet. Ce voyage s'annonce vraiment bien.
+      On arrive parfaitement à l'heure à Ahmedabad et une fois tous les produits anti-moustique appliqués et les
+      médicaments préventifs avalés, on est prêt à découvrir ce pays, nouveau pour deux d'entre nous. Une arrivée difficile à
       5h30 dans notre petite maison qui nous servira de logement pendant presque trois semaines et un réveil encore
-      plus compliqué à 9h nous font arriver dans le centre de Manav Sadhna très fatigué. Mais la fatigue ne démotive
-      pas 4 jeunes garçons prêt à tout pour aller au bout de leur projet. Après une petite cérémonie d accueil où l’on
-      reçoit un joli point jaune sur le front et un petit coeur pour montrer l amour qui va être partager pendant notre
+      plus compliqué à 9h nous font arriver dans le centre de Manav Sadhna très fatigués. Mais la fatigue ne démotive
+      pas 4 jeunes garçons prêts à tout pour aller au bout de leur projet. Après une petite cérémonie d'accueil où l’on
+      reçoit un joli point jaune sur le front et un petit coeur pour montrer l'amour qui va être partagé pendant notre
       séjour. Le premier jour est en fait un jour de découverte. Nous ne commençons pas tout de suite à travailler sur
       notre projet mais on visite la ville avec l'aide du superviseur des volontaires, un indien du nom de Ajay. Nous
       avons visité une autre partie du centre de Manav Sadhna. Un centre situé juste à côté d’un bidonville. Les jeunes
-      vivent dans des conditions désastreuses mais Manav Sadhna fait tous pour les aider en les emmenant à l école et en
-      les nourissant. Tous ces enfants ont l air tellement heureux de nous voir et veulent tous nous serrer la main.
-      Ils ne veulent d ailleurs à la fin plus nous lâcher. En fin de journée, nous avons pu voir les filles du centre
-      communautaire danser sur de la musique bolywoodienne. La danse était un des moyens privilégiés pour oublier, ne
-      penser qu'à l'instant présent, le temps de quelques minutes. C'est la gentilesse, la souplesse d'esprit et les sourires
-      sur ces visages d'enfants qui nous ont le plus inspiré et motivé encore plus pour mener ce projet à bout.
+      vivent dans des conditions désastreuses mais Manav Sadhna fait tout pour les aider en leur offrant éducation et nourriture.
+      Tous les enfants viennent nous serrer la main et s'agglutinent autour de nous avec des grands sourires.
+      En fin de journée, nous avons pu voir les filles du centre communautaire danser sur de la musique bolywoodienne.
+      La danse est ici un moyen privilégié pour oublier, ne penser qu'à l'instant présent, le temps de quelques minutes.
+      C'est la gentilesse, la souplesse d'esprit et les sourires sur ces visages d'enfants qui nous ont le plus inspiré et
+      motivé encore plus pour mener ce projet à bout et à bien.
 
     </p>
 
@@ -43,7 +43,7 @@ title: Kassiopé Project
       durant notre séjour. Puis il nous a dévoilé son talent de rappeur hip-hop, il a pris son nom d'artiste Nimo et
       nous a fait chanter avec lui avant de nous offrir son CD appelé “Empty hands”. Selon lui, l'important est d'arriver
       les mains vides et de repartir les mains vides.
-      L’après-midi, c est le début du projet. Après l’installation des machines nous commençons tout d abord par former
+      L’après-midi, c est le début du projet. Après l’installation des machines nous commençons tout d'abord par former
       les volontaires qui reprendront le projet quand on sera parti. Ils ont du mal à comprendre vite à cause de leur
       niveau d’anglais mais très vite quelques indiens parlant mieux anglais traduisent nos explications. Les volontaires
       sont en tout cas très déterminés à apprendre et le simple fait de découvrir un nouveau domaine les rend heureux.
@@ -53,30 +53,31 @@ title: Kassiopé Project
 
     <h3>Week-end 1</h3>
     <p>
-      Le samedi matin, nous avons assisté à la prière hindou à 10 heures. Cela a commence par plusieurs chansons
-      indienne qui passait un message de paix puis par en deuxième partie, chacun prenait la parole librement pour
-      remercier qui que ce soit ou pour parler de quelque chose qui les a émus ces derniers temps. Il faut savoir
-      que la prière était hindou mais que toutes les religions et aussi les athés sont acceptés et aucun ne sont jugés.
+      Le samedi matin, nous avons assisté à la prière hindou à 10 heures. Après plusieurs chansons
+      indiennes transportant un message de paix, nous avions la possibilité de prendre la parole librement pour
+      remercier qui que ce soit ou pour parler de quelque chose qui nous a ému ces derniers temps. Il faut savoir
+      que la prière était hindou mais que toutes les religions et aussi les athées sont acceptées et même bienvenues.
       Peu après, le fondateur de Manav Sadhna, Viren à fait un long discours pour nous raconter son parcours un peu plus
-      en détail. C'était extrêmement inspirant de voir cet homme qui a quitté sa belle vie d ingénieur aux USA à 28 ans
-      pour tous recommencer à zéro et aider les enfants des bidonvilles. Pendant 4 ans, aucun de ses projets n'aboutissent
+      en détail. C'était extrêmement inspirant de voir cet homme qui a quitté sa belle vie d'ingénieur aux USA à 28 ans
+      pour tout recommencer à zéro et dédier sa vie à aider les enfants des bidonvilles. Pendant 4 ans, aucun de ses projets n'aboutissent
       mais il continue de persévérer et il arrive à fonder Manav Sadhna qui accueille aujourd'hui plus de 9000 jeunes des
-      bidonvilles. C était une grande leçon de vie pour nous apprendre à toujours continuer ses projets si ils viennent
-      réellement du coeur.
-      Puis l’après-midi, nous avons continué de former Rahman, le volontaire pour aider au projet kassiopé. Il est toujours
-      aussi motivé pour apprendre et sa formation avance bien.
-      Le soir nous avons dormi chez des amis indiens et le lendemain, un des amis du nom de Shiv nous à amener dans un club
-      avec plusieurs sport pendant la plupart de la journée. Nous avons pu voir la différence de richesse entre la population
-      indienne et ça nous a fortement marqué. Les inégalités sont très présentes dans ce pays. Le soir nous sommes de retour
-      à Manav Sadhna pour reprendre des forces et se préparer à notre première journée de test de vision sur les enfants.
+      bidonvilles. C'était une grande leçon de vie pour nous apprendre à toujours continuer nos projets, et qu'avec motivation,
+      tout objectif peut venir à bout à condition qu'il vienne du coeur.
+      Puis, l’après-midi, nous avons continué de former Rahman, le volontaire pour aider au projet kassiopé. Il est toujours
+      aussi motivé pour apprendre et permettre aux enfants des bidonvilles avec lesquels il a grandi d'obtenir des lunettes
+      et sa formation avance bien.
+      Le soir nous avons dormi chez des amis indiens et le lendemain, un des amis du nom de Shiv nous a ammené dans un club de sport
+      auquel on a joué au tennis de table, badminton et ... billard. Nous avons pu voir la différence de richesse entre la population indienne.
+      Les inégalités sont tellement visibles dans ce pays. Le soir nous sommes de retour à Manav Sadhna pour reprendre des forces et nous préparer
+      à notre première journée de tests visuels sur les enfants.
 
     </p>
 
     <h3>Jour 5</h3>
     <p>
-      C’est le premier jour où on commence les tests sur les enfants. On ne sait pas réellement à quoi s’attendre
-      mais on part déterminé à sankharbhuvan, le premier centre de notre projet. Après une courte cérémonie de bienvenue,
-      on installe les machines et on se lance. Le matin, nous ne somme pas encore vraiment prêt et on effectue seulement
+      C’est le premier jour de tests. On ne sait pas réellement à quoi s’attendre
+      dans l'école de sankharbhuvan, le premier centre de notre projet. Après une courte cérémonie de bienvenue,
+      on installe les machines et on se lance. Le matin, nous ne sommes pas encore vraiment prêts et on effectue seulement
       5 tests sur les enfants. Mais après un repas à Manav Sadhna et une réflexion sur comment mieux effectuer les tests,
       on repart plein d'ambition. Et l’après-midi, on effectue 17 tests. Pas mal pour un début.
 
@@ -86,7 +87,7 @@ title: Kassiopé Project
     <p>
       C’est le deuxième jour au centre de sankharbhuvan. On a bien pris le rythme des consultations et on passe à
       deux tests sur les enfants simultanément. En même temps, on continue de former les volontaires qui continueront
-      le projet. Maxime forme quelqu'un qui s occupe de la logistique tandis que Clément apprend à un autre volontaire
+      le projet. Maxime forme quelqu'un qui s'occupe de la logistique tandis que Clément apprend à un autre volontaire
       à utiliser l’autorefractomètre. De leur côté, Pierre et Matthew forment deux volontaires a réaliser des tests de
       vision de loin et de près. La machine est bien huilée et à la fin du deuxième jour dans le premier centre, on a
       effectué des tests sur tous les enfants. Avec 60 tests en tout, le résultat est bien au dessus de nos espérances.
@@ -99,15 +100,14 @@ title: Kassiopé Project
     <p>
       Après avoir fini le premier centre secondaire de Manav Sadhna, on se dirige vers le centre de Bah Sanshar
       pour continuer notre mission. Le centre est encore au milieu d’un bidonville mais il est beaucoup plus grand.
-      Une grande cour ronde est au milieu du centre et les élèves étudient dans de meilleures conditions. Après
-      l’habituelle cérémonie de bienvenue, on se met tout de suite au travail. On est beaucoup plus à l’aise et
-      les consultations s’enchaînent rapidement. Les enfants sont très compréhensif et ça nous facilite la tâche.
+      Après l’habituelle cérémonie de bienvenue, on se met tout de suite au travail. Les consultations s’enchaînent rapidement.
+      Les enfants sont très compréhensifs et ça nous facilite la tâche.
       À la fin de la journée, on va avec deux autres volontaires du centre dans un bidonville près de nos habitations.
       Elles nous présentent une fille qu’elles ont rencontrées et on se fait inviter à prendre le thé. On voit bien le
       mode de vie difficile des habitants des bidonvilles mais les enfants ont l’air tellement heureux de nous voir que
       ça redonne le sourire à tout le monde. Le soir, notre petit groupe se retrouve dans un café créé par Manav Sadhna
-      en 2005. Le principe est très intéressant: il n'y a pas de prix sur la nourriture mais chacun donne ce qu’il veut
-      à la fin de repas. Tout le personnel du restaurant sont tous des volontaires d’ailleurs.
+      en 2005 : le Séva Café. Le principe est très intéressant: il n'y a pas de prix sur la nourriture mais chacun donne ce qu’il veut
+      à la fin de repas, ce “don” sera distribué aux personnels du restaurant qui sont volontaires.
     </p>
   </div>
 
